Fix misaligned label in image field

--- a/assets/css/modules/_fields.file.css
+++ b/assets/css/modules/_fields.file.css
@@ -21,7 +21,7 @@
 .carbon-attachment:hover .button,
 .carbon-attachment .carbon-description.hidden + .button { visibility: visible; opacity: 1; }
 
-.carbon-attachment .carbon-attachment-file-name { position: absolute; z-index: 10; left: 0; bottom: 0; width: 100%; height: 28px; padding: 0 5px; background: $color-grey-bg; border: 1px solid $color-border-darker; color: $color-label; font-size: 13px; line-height: 26px; white-space: nowrap; overflow: hidden; text-align: center; text-overflow: ellipsis; }
+.carbon-attachment .carbon-attachment-file-name { position: absolute; z-index: 10; left: 0; right: 0; bottom: 0; height: 28px; padding: 0 5px; background: $color-grey-bg; border: 1px solid $color-border-darker; color: $color-label; font-size: 13px; line-height: 26px; white-space: nowrap; overflow: hidden; text-align: center; text-overflow: ellipsis; }
 
 /* ------------------------------------------------------------ *\
 	Field - Image
